fixed layout issues

--- a/src/pages/Home/Testimonial/Pagination.css
+++ b/src/pages/Home/Testimonial/Pagination.css
@@ -1,7 +1,8 @@
 .swiper-pagination {
 	color: #4759f9;
 	padding: 10px 0;
-	margin: 8px 0;
+	/* margin: 8px 0; */
+	/* border: 1px solid red; */
 }
 .swiper-pagination-bullet {
 	margin-right: 8px;
